# aoc-2025

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  update-stars.yml
src/: lib.rs  main.rs
src/template/: day.rs
