[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Hayden Moritz <me@hmoritz.dev>"]
edition = "2024"
default-run = "advent_of_code"
publish = false

[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
chrono = { version = "0.4.42", optional = true }
dhat = { version = "0.3.3", optional = true }
itertools = "0.14.0"
pico-args = "0.5.0"
regex = "1.12.2"
tinyjson = "2.5.1"
